clang/test/Parser/goto-ident.c
/* RUN: clang -parse-ast -verify %s
*/

void foo() { 
  goto ; /* expected-error {{expected identifier}} */
}
